# midend

./: Cargo.toml  Cross.toml  README.md  build  justfile
.cargo/: config
src/: api.rs  audio.rs  bluetooth.rs  camera.rs  lib.rs  main.rs  models.rs  motion.rs  pi_gpio.rs
