[package]
name = "garbagio_midend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur", "nithinmuthukumar"]
description = ""
repository = "https://github.com/IgnitionHacks2022/midend"

[features]

[dependencies]
futures = "0.3.19"
tokio = { version = "1" }
bluer = {version = "0.15.0", features = ["bluetoothd"]}
rand = "0.8"

reqwest = { version = "0.11", features = ["blocking", "json"] }
rscam = "0.5"
sysfs_gpio = "0.6"
opencv = { version = "0.66", default-features = false, features = ["highgui", "imgcodecs", "imgproc", "videoio"] }
rodio = { version = "0.15", default-features = false, features = ["mp3"] }
serde = { version = "1", features = ["derive"] }

anyhow = "1"
thiserror = "1"
pino_utils = { git = "https://github.com/MrPicklePinosaur/pino_utils" }
