[package]
name = "indabin_midend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur", "nithinmuthukumar"]
description = ""
repository = "https://github.com/IgnitionHacks2022/midend"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "gpio-debug"
path = "src/bin/gpio-debug/main.rs"

[dependencies]
futures = "0.3.19"
tokio = { version = "1", features = ["rt-multi-thread"] }
bluer = {version = "0.15.0", features = ["bluetoothd"]}
rand = "0.8"

reqwest = { version = "0.11", features = ["json"] }
sysfs_gpio = "0.6"
opencv = { version = "0.66", default-features = false, features = ["highgui", "imgcodecs", "imgproc", "videoio"] }
rodio = { version = "0.15", default-features = false, features = ["mp3", "wav"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
base64 = { version = "0.13" }

anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.9"
pino_utils = { git = "https://github.com/MrPicklePinosaur/pino_utils" }
